<resources>
    <string name="app_name">Travel in Game</string>
    <string name="app_id">398592920275073</string>
    <string name="common_cargando">Loading...</string>
    <string name="common_todas">ALL</string>
    <string name="common_todos">ALL</string>
    <string name="tips_ocultar_ayuda">Hide help</string>
    <string name="tips_siguiente">Next</string>
    <string name="tips_a_jugar">Let\'s play!</string>
    <string name="about_informacion">INFORMATION</string>
    <string name="about_text">Travel in Game is a game about travel and curious and adventurous traveler or just a way to entertain travelers destinations around . \n \n
In Game Travel in the destination becomes a game board . You can play geo games, which are played directly on the target, visiting the places that appear in the game . But you can also play from either side , before or after the trip , to recognize places already visited or discover the places we like to visit. \N \n
Travel in Game has been made ​​possible by funding from the Ministry of Industry, Energy and Tourism and the direct involvement of Madrid Tourism Cluster Network. \N
Sponsor this traveling game leading tourism businesses : Flights, Restaurante Botin and Anaya Touring \n\n .
The selection of destinations and tourist attractions , as well as the contents are inspired by the collection of guides Anaya Touring \' Guide compact . A short drive to ... \'Y Collection \' Back to ... \'\n \n
Press play and enjoy the ride .</string>
    <string name="home_gully_frase_bocadillo_1">Hi! I\'m Gully. Welcome to</string>
    <string name="home_gully_frase_bocadillo_2">The game of audacious travelers. Explore the destinations of social geo-gaming</string>
	<string name="home_ciudad">CITY...</string>
	<string name="home_juego">GAME...</string>
	<string name="home_mostrar_juegos">Show GAMES</string>
	<string name="home_mostrar_solo_destinos">Show only DESTINATIONS</string>
	<string name="home_no_hay_elementos">:( No items</string>
	<string name="home_tip_title_juegos_y_destinos">GAMES AND DESTINATIONS</string>
	<string name="home_tip_message_utiliza_la_cuadricula_para_ver_los_juegos_y_destinos">Use this grid to show different GAMES and DESTINATIONS</string>
	<string name="home_tip_title_ayuda_y_logros">HELP AND ACHIEVEMENT</string>
	<string name="home_tip_message_pulsa_este_icono_para_ver_mas_secciones">Press this icon to show your PASSPORT and other sections</string>
	<string name="home_tip_title_toca_y_diviertete">TOUCH AND FUN</string>
	<string name="home_tip_message_toca_sobre_un_juego_para_comenzar_a_jugar">Touch on a GAME to start playing</string>
	<string name="premios_premios">AWARDS</string>
	<string name="premios_no_hay_elementos">:( No items</string>
	<string name="premios_detalle_premio">AWARD DETAIL</string>
	<string name="premios_sin_titulo">NO TITLE</string>
	<string name="premios_sin_descripcion_disponible">No description is available</string>
	<string name="premios_error_al_cargar">Error loading</string>
	<string name="premios_no_se_puede_cargar_el_premio_en_estos_momentos">We can\'t load the award at this moment</string>
	<string name="historias_historias">Stories</string>
	<string name="historias_gully_frase_bocadillo">Stay comfortable and select a story. You can also choose it by city or location</string>
	<string name="historias_ciudad">CITY...</string>
	<string name="historias_no_hay_elementos">:( No items</string>
	<string name="historias_detalle_historia">STORY DETAIL</string>
	<string name="historias_sin_titulo">NO TITLE</string>
	<string name="historias_sin_descripcion_disponible">No description is available</string>
	<string name="historias_error_al_cargar">Error loading</string>
	<string name="historias_no_se_puede_cargar_la_historia_en_estos_momentos">We can\'t load the story at this moment</string>
	<string name="destinos_detalle_destino">DESTINATION DETAIL</string>
	<string name="destinos_sin_titulo">NO TITLE</string>
	<string name="destinos_sin_descripcion_disponible">No description is available</string>
	<string name="destinos_error_al_cargar">Error loading</string>
	<string name="destinos_no_se_puede_cargar_el_destino_en_estos_momentos">We can\'t load the destination at this moment</string>
	<string name="login_unete_a_la_comunidad_de_jugadores_audaces_travel_in_game">Join the Travel in Game audacious players community</string>
	<string name="login_si_solo_quieres_probar">If you only want to try it</string>
	<string name="login_usa_tu_cuenta_de_facebook">Use your Facebook account</string>
	<string name="login_usa_tu_cuenta_de_travel_in_game">Use your Travel in Game account</string>
	<string name="login_correo_electronico">Email</string>
	<string name="login_contrasena">Password</string>
	<string name="login_entrar">Enter!</string>
	<string name="login_cerrar">Close</string>
	<string name="login_unirse">Join</string>
	<string name="login_error">Error</string>
	<string name="login_error_al_entrar">Error entering</string>
	<string name="login_por_favor_introduce_tu_correo_electronico">Please, enter your email</string>
	<string name="login_por_favor_introduce_tu_contrasena">Please, enter your password</string>
	<string name="login_el_correo_electronico_especificado_no_es_valido">The entered email is no valid</string>
	<string name="login_la_contrasena_es_demasiado_corta">The password is so short</string>
	<string name="login_datos_incorrectos">Incorrect data</string>
	<string name="login_el_usuario_o_la_contrasena_no_existe">The user or password doesn\'t exist</string>
	<string name="login_error_al_hacer_login">Error on login</string>
	<string name="register_unete_a_la_comunidad_travel_in_game">Join the Travel in Game community</string>
	<string name="register_correo_electronico">Email</string>
	<string name="register_contrasena">Password</string>
	<string name="register_repite_contrasena">Repeat password</string>
	<string name="register_nombre_opcional">First Name (optional)</string>
	<string name="register_apellidos_opcional">Last Name (optional)</string>
	<string name="register_unete">Join!</string>
	<string name="register_cerrar">Close</string>
	<string name="register_crear_cuenta">Create account</string>
	<string name="register_deseas_crear_tu_cuenta_en_travel_in_game">Do you want to create your account on Travel in Game?</string>
	<string name="register_cancelar">Cancel</string>
	<string name="register_por_favor_introduce_tu_correo_electronico">Please, enter your email</string>
	<string name="register_el_correo_electronico_especificado_no_es_valido">The entered email is not valid</string>
	<string name="register_por_favor_introduce_tu_contrasena">Please, enter your password</string>
	<string name="register_por_favor_repite_tu_contrasena">Please, repeat your password</string>
	<string name="register_la_contrasena_es_demasiado_corta">The password is so short</string>
	<string name="register_contrasenas">Passwords</string>
	<string name="register_las_contrasenas_no_coinciden">The passwords don\'t match</string>
	<string name="register_error_al_crear_cuenta">Error on creating account</string>
	<string name="pasaporte_pasaporte">PASSPORT</string>
	<string name="pasaporte_anadir">ADD</string>
	<string name="pasaporte_foto_avatar">PHOTO/AVATAR</string>
	<string name="pasaporte_editar_datos_de_usuario">Edit user data</string>
	<string name="pasaporte_puntos">POINTS</string>
	<string name="pasaporte_medallas">BADGES</string>
	<string name="pasaporte_visados">VISAS</string>
	<string name="pasaporte_sellos">STAMPS</string>
	<string name="pasaporte_ver">Show</string>
	<string name="pasaporte_desconectar">Disconnect</string>
	<string name="pasaporte_desconexion">Disconnection</string>
	<string name="pasaporte_deseas_desconectarte_de_travel_in_game">Do you want to disconnect from Travel in Game?</string>
	<string name="pasaporte_cancelar">Cancel</string>
	<string name="pasaporte_error">Error</string>
	<string name="pasaporte_no_se_puede_desconectar_la_sesion_actual">We can\'t disconnect your current session</string>
	<string name="pasaporte_error_al_comprobar_sesion">Error checking session</string>
	<string name="pasaporte_error_al_cargar_pasaporte">Error loading your passport</string>
	<string name="pasaporte_agrega_tu_nombre">Add your first name</string>
	<string name="pasaporte_agrega_tus_apellidos">Add your last name</string>
	<string name="pasaporte_modificar_mi_contrasena">Change my password</string>
	<string name="pasaporte_nueva_contrasena">New password</string>
	<string name="pasaporte_contrasena_actual">Current password</string>
	<string name="pasaporte_guardar">Save</string>
	<string name="pasaporte_por_favor_introduce_tu_contrasena_actual">Please, enter your current password</string>
	<string name="pasaporte_por_favor_introduce_tu_nueva_contrasena">Please, enter your new password in order to change it</string>
	<string name="pasaporte_error_durante_la_subida_de_la_imagen">Error on upload image</string>
	<string name="pasaporte_error_al_actualizar_los_datos_del_usuario">Error on user data update</string>
	<string name="game_intro_cargando_guia_del_juego">Loading game instructions...</string>
	<string name="game_intro_error">Error</string>
	<string name="game_intro_error_al_comprobar_sesion">Error checking session</string>
	<string name="game_intro_error_al_cargar_juego">Error loading the game</string>
	<string name="game_intro_no_se_puede_reiniciar_la_partida">We can\'t reset the game now</string>
	<string name="one_explorer">EXPLORER</string>
	<string name="one_titulo">Title</string>
	<string name="one_descripcion">Description</string>
	<string name="one_logros_conseguidos">Earned achievements</string>
	<string name="one_vota_este_juego">Vote this game</string>
	<string name="one_continuar">Continue</string>
	<string name="one_realidad_aumentada">Augmented reality</string>
	<string name="one_no_hay_geocaches_que_mostrar">There are no geocaches to show</string>
	<string name="one_error_en_la_carga_de_geocaches">Error loading geocaches</string>
	<string name="one_juega_otra_vez">Play again</string>
	<string name="one_prueba_otro_lugar">Try on other place</string>
	<string name="one_has_agotado_los_intentos_para_encontrar_el_tesoro">You have spent all the attempts to find the treasure</string>
	<string name="one_error">Error</string>
	<string name="one_error_general">General error</string>
	<string name="one_no_se_puede_capturar_el_geocache">Can\'t catch the treasure</string>
	<string name="one_esperando_gps">Waiting GPS...</string>
	<string name="one_no_hay_conexion">No connection</string>
	<string name="one_no_dispones_de_conexion_a_internet_intentalo_de_nuevo">You have no Internet connection. Try again</string>
	<string name="one_bravo_lo_has_encontrado_abre_el_cofre">Hurra! you found it. Open the chest</string>
	<string name="one_aun_estas_lejos_este_cofre_esta_a">You are still far away from this chest, it\'s at</string>
	<string name="one_de_donde_te_encuentras_aproximate_a_este_lugar_y_lo_podras_abrir">of your current location. Get near and you will can open it</string>
	<string name="one_no_te_queda_mucho_solo_estas_a">You are near, only at</string>
	<string name="one_sigue_buscando">still looking</string>
	<string name="one_el_geocache_no_tiene_coordenadas">The geocache has no coordinates</string>
	<string name="one_abre_el_cofre_y_descubre_si_esconde_el_tesoro_de_gully">Open the chest and if Gully\'s treasure is inside</string>
	<string name="multiplayer_nueva_partida">NEW GAME</string>
	<string name="multiplayer_nombre_de_la_partida">Game title</string>
	<string name="multiplayer_juego_seleccionado">Selected game</string>
	<string name="multiplayer_numero_minimo_de_jugadores_para_comenzar">Minimum number of players to start the game</string>
	<string name="multiplayer_numero_maximo_de_jugadores_admitidos">Maximum permitted players</string>
	<string name="multiplayer_entrar_en_la_partida">Enter game</string>
</resources>