<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dark_green_round_corners"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_unete_a_la_comunidad_de_jugadores_audaces_travel_in_game"
        android:textColor="@color/blanco"
        android:textSize="25sp"
        android:gravity="center_horizontal" />
    
    <Button
            android:id="@+id/btnModoPrueba"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/tbPass"
            android:text="@string/login_si_solo_quieres_probar"
            android:textSize="18sp"
            android:background="@drawable/btn_state_general" />

    <RelativeLayout
        android:id="@+id/cajaLoginFacebook"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_white_round_corners" >
        
        <LinearLayout 
            android:id="@+id/layoutCabeceraSeccionLoginFB"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">
            
            <ImageView 
                android:id="@+id/imgViewLoginFB"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/login_icono_facebook"/>
            
            <TextView
		        android:id="@+id/tvLoginFB"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_gravity="center_horizontal|center_vertical"
		        android:text="@string/login_usa_tu_cuenta_de_facebook"
		        android:textColor="@color/azul_principal_oscuro"
		        android:textSize="18sp" />
            
        </LinearLayout>
        
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/cajaLoginTing"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@drawable/shape_white_round_corners" >
        
        <LinearLayout 
            android:id="@+id/layoutCabeceraSeccionLoginTing"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">
            
            <ImageView 
                android:id="@+id/imgViewLoginTing"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/login_icono_ting"/>
            
            <TextView
		        android:id="@+id/tvLoginTing"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_gravity="center_horizontal|center_vertical"
		        android:text="@string/login_usa_tu_cuenta_de_travel_in_game"
		        android:textColor="@color/azul_principal_oscuro"
		        android:textSize="18sp" />
            
        </LinearLayout>

        <EditText
            android:id="@+id/tbMail"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="@string/login_correo_electronico"
            android:textColorHint="@color/azul_principal_oscuro_transparente_50"
            android:textColor="@color/azul_principal_oscuro"
            android:inputType="textEmailAddress"
            android:text=""
            android:background="@drawable/shape_green_round_corners_border" />

        <EditText
            android:id="@+id/tbPass"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/tbMail"
            android:hint="@string/login_contrasena"
            android:inputType="textPassword"
            android:text=""
            android:textColorHint="@color/azul_principal_oscuro_transparente_50"
            android:textColor="@color/azul_principal_oscuro"
            android:background="@drawable/shape_green_round_corners_border" />

        <LinearLayout 
            android:id="@+id/layoutBotones"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="30">
            
            <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="10"
            android:layout_below="@+id/tbPass"
            android:text="@string/login_entrar"
            android:textSize="18sp"
            android:background="@drawable/btn_state_general" />

        	<Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="10"
            android:layout_below="@+id/tbPass"
            android:layout_toRightOf="@+id/btnLogin"
            android:text="@string/login_cerrar"
            android:textSize="18sp"
            android:background="@drawable/btn_state_general" />
        	
        	<Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="10"
            android:layout_below="@+id/tbPass"
            android:layout_toRightOf="@+id/btnLogin"
            android:text="@string/login_unirse"
            android:textSize="18sp"
            android:background="@drawable/btn_state_general" />
            
        </LinearLayout>
        
        
    </LinearLayout>

</LinearLayout>